
2018-08-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* xml.c [!WITH_XML2] (cob_is_valid_uri): added minimal implementation,
	  as this function is also used from within cobc
	* xml.c: explicit check for the non-standard header files instead of
	  the global WITH_XML definition
	* xml.c, common.h: fixed compiler warnings

2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* xml.c: new file, added for XML GENERATE

2018-08-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* coblocal.h, numeric.c (cob_decimal_init2): fixed compiler warning

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* common.h, intrinsic.c: CONTENTS-OF renamed to CONTENT-OF

2018-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: added defines for not yet implemented standard
	  I-O status values

2018-07-14  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (get_screen_item_line_and_col): fixed bug #514, where
	  length of elementary items with a LINE clause was ignored when
	  calculating the COL of subsequent items.

2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): display maximum size on overflow

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* move.c (cob_move_display_to_edited): fixed bug #220 again; this time
	  where $ would incorrectly float before a string of +/-.

2018-06-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* system.def: bug #527 system call x'91' *always* uses three parameters

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* common.h, intrinsic.c: Added CONTENT-LENGTH and CONTENTS-OF

2018-06-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: allow to override COB_EXPIMP, especially for allowing
	  static builds on _WIN32 via -DCOB_EXPIMP=extern

2018-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c [_WIN32]: only define __GMP_LIBGMP_DLL if it is not